# socratic-sofa

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_STATUS.md  HF_README.md  Makefile  README.md  TASKS.md  app.py  pyproject.toml  report.md  requirements.txt
.github/workflows/: ci.yml  deploy.yml
.serena/: project.yml
docs/: CHANGELOG.md  CREWAI_PROJECT_TEMPLATE.md  DEPLOYMENT-HF-SYNC.md  PROJECT_STATUS.md  README.md
docs/api/: content-filter.md  crew.md  gradio-app.md  logging-config.md  rate-limiter.md  schemas.md
docs/architecture/: agents.md  content-moderation.md  overview.md  tasks.md
docs/development/: contributing.md  deployment.md  setup.md  testing.md
docs/getting-started/: first-dialogue.md  installation.md  quickstart.md
docs/user-guide/: cli-usage.md  custom-topics.md  topic-library.md  web-interface.md
socratic_sofa/: .env.example  DEPLOYMENT_STATUS.md  Makefile  README.md  app.py  pyproject.toml
socratic_sofa/.serena/: project.yml
socratic_sofa/docs/: DEPLOYMENT-HF-SYNC.md
socratic_sofa/docs/architecture/: content-moderation.md
socratic_sofa/docs/user-guide/: web-interface.md
socratic_sofa/outputs/: 01_topic.md  02_proposition.md  03_opposition.md  04_judgment.md
socratic_sofa/src/socratic_sofa/: content_filter.py  crew.py  gradio_app.py  topics.yaml
socratic_sofa/src/socratic_sofa/config/: agents.yaml  tasks.yaml
src/socratic_sofa/: content_filter.py  crew.py  gradio_app.py  logging_config.py  main.py  rate_limiter.py  schemas.py
src/socratic_sofa/config/: agents.yaml  tasks.yaml
tests/: README.md  __init__.py  conftest.py  test_content_filter.py  test_crew.py  test_edge_cases.py  test_gradio_app.py  test_gradio_app_streaming.py  test_logging_config.py  test_main.py  test_rate_limiter.py  test_schemas.py
